<resources>
    <string name="app_name">प्रधानमंत्री जनधन योजना 2025</string>

    <string name="newfarmer">New Farmer Registration\n</string>
    <string name="register_info">Already have an account? Login</string>
    <string name="Register">Register</string>
    <string name="enter_password">Create Password</string>
    <string name="new_farmer">NEW FARMER REGISTRATION</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="login_info">Already registered? Login here</string>
    <string name="register">Register</string>
    <string name="mother_name">Mother Name</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="pan_number">PAN Number</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="full_name">Full Name</string>
    <string name="accessibility_service_description">Nothing\n</string>
</resources>