<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/newfarmer"
            android:textSize="22sp"
            android:textStyle="bold"
            android:padding="1dp"
            android:gravity="center"
            android:background="#008577"
            android:textColor="#FFFFFF"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/loginimg"
            android:layout_width="match_parent"
            android:layout_height="288dp"
            android:layout_marginTop="40dp"
            android:scaleType="fitXY"
            android:src="@drawable/main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_farmer"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/loginimg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:background="@drawable/edittext_border"
            app:layout_constraintTop_toBottomOf="@id/loginTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"/>

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            android:padding="10dp"
            android:background="@drawable/edittext_border"
            app:layout_constraintTop_toBottomOf="@id/etName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="30dp"/>

        <EditText
            android:id="@+id/etAadharNumber"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:hint="@string/aadhar_number"
            android:inputType="number"
            android:maxLength="12"
            android:padding="10dp"
            android:background="@drawable/edittext_border"
            app:layout_constraintTop_toBottomOf="@id/etPhoneNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="30dp"/>

        <EditText
            android:id="@+id/etPanNum"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:hint="@string/pan_number"
            android:inputType="text"
            android:maxLength="10"
            android:padding="10dp"
            android:background="@drawable/edittext_border"
            app:layout_constraintTop_toBottomOf="@id/etAadharNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="30dp"/>

        <EditText
            android:id="@+id/etMothername"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:hint="@string/mother_name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:background="@drawable/edittext_border"
            app:layout_constraintTop_toBottomOf="@id/etPanNum"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="30dp"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/holo_blue_dark"
            app:layout_constraintTop_toBottomOf="@id/etMothername"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"/>

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_info"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/btnRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="405dp"
            android:layout_height="108dp"
            android:background="#F0F0F0"
            android:contentDescription="@string/disclaimer"
            android:scaleType="fitXY"
            android:src="@drawable/nic"
            app:layout_constraintTop_toBottomOf="@id/tvRegister"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
